--- a/css-portfolio.css
+++ b/css-portfolio.css
@@ -75,6 +75,9 @@ body{
         border: 1px solid black;
         padding: 10px;
         vertical-align: top;
+           #cv{
+          color: green;
+        }
        
       
       
